[project]
name = "corrosion-detection-model"
version = "0.1.0"
description = ""
authors = [
    {name = "PriyaKulkarni2",email = "avpril260604@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
